# bevy-inspector-egui

crates/bevy-inspector-egui/: Cargo.toml
crates/bevy-inspector-egui-derive/: Cargo.toml
crates/bevy-inspector-egui/src/: lib.rs  quick.rs
crates/bevy-inspector-egui/src/bevy_inspector/: mod.rs
crates/bevy-inspector-egui/src/inspector_egui_impls/: bevy_impls.rs  glam_impls.rs  mod.rs  std_impls.rs
crates/bevy-inspector-egui/src/inspector_egui_impls/image/: image_texture_conversion.rs
crates/bevy-inspector-egui/src/inspector_options/: default_options.rs  mod.rs
crates/bevy-inspector-egui/src/reflect_inspector/: mod.rs
