[package]
name = "bevy-inspector-egui"
version = "0.24.0"
edition = "2021"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Inspector plugin for the bevy game engine"
documentation = "https://docs.rs/bevy-inspector-egui"
keywords = ["bevy", "inspector", "egui", "editor", "reflect"]
categories = [
    "game-development",
    "gui",
    "visualization",
    "development-tools::procedural-macro-helpers",
]

[features]
default = ["bevy_pbr"]
highlight_changes = []

[dependencies]
bevy-inspector-egui-derive = { version = "0.24.0", path = "../bevy-inspector-egui-derive" }
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_asset = { git = "https://github.com/bevyengine/bevy" }
bevy_core = { git = "https://github.com/bevyengine/bevy" }
bevy_color = { git = "https://github.com/bevyengine/bevy" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_hierarchy = { git = "https://github.com/bevyengine/bevy" }
bevy_log = { git = "https://github.com/bevyengine/bevy" }
bevy_math = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy" }
bevy_time = { git = "https://github.com/bevyengine/bevy" }
bevy_utils = { git = "https://github.com/bevyengine/bevy" }
bevy_window = { git = "https://github.com/bevyengine/bevy" }

bevy_core_pipeline = { git = "https://github.com/bevyengine/bevy" }
bevy_pbr = { git = "https://github.com/bevyengine/bevy", optional = true }
bevy_render = { git = "https://github.com/bevyengine/bevy" }

egui = "0.27"
bevy_egui = { git = "https://github.com/tychedelia/bevy_egui" } 

bytemuck = { version = "1.5", features = ["derive"] }
image = { version = "0.24", default-features = false }
once_cell = "1.16"
pretty-type-name = "1.0"
smallvec = "1.10"

egui-dropdown = "0.9.0"

fuzzy-matcher = "0.3.7"

[dev-dependencies]
bevy = { path = "../../../../bevyengine/bevy", default-features = false, features = [
    "x11",
    "bevy_winit",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_core_pipeline",
    "animation",
    "png",
    "zstd",
    "tonemapping_luts",
    "ktx2",
] }
egui_dock = "0.12"
transform-gizmo-egui = "0.1"
# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "554649a951689dce66d0d759839b326874e8826f", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
# bevy_framepace = "0.11"


[[example]]
name = "inspector_options"
path = "examples/basic/inspector_options.rs"

[[example]]
name = "custom_type_ui"
path = "examples/basic/custom_type_ui.rs"

[[example]]
name = "resource_inspector_manual"
path = "examples/basic/resource_inspector_manual.rs"

[[example]]
name = "resource_inspector"
path = "examples/quick/resource_inspector.rs"

[[example]]
name = "filter_query_inspector"
path = "examples/quick/filter_query_inspector.rs"

[[example]]
name = "asset_inspector"
path = "examples/quick/asset_inspector.rs"

[[example]]
name = "world_inspector"
path = "examples/quick/world_inspector.rs"

[[example]]
name = "world_inspector_assets"
path = "examples/quick/world_inspector_assets.rs"

[[example]]
name = "state_inspector"
path = "examples/quick/state_inspector.rs"

[[example]]
name = "egui_dock"
path = "examples/integrations/egui_dock.rs"

[[example]]
name = "side_panel"
path = "examples/integrations/side_panel.rs"
